@@ -85,6 +85,100 @@ getmap/getmapdl.lua
 glossaries/makeglossaries
 glossaries/makeglossaries-lite.lua
 hyperxmp/hyperxmp-add-bytecount.pl
+jfmutil/jfmutil.pl
+ketcindy/ketcindy.pl
+kotex-utils/jamo-normalize.pl
+kotex-utils/komkindex.pl
+kotex-utils/ttf2kotexfont.pl
+l3build/l3build.lua
+latex-git-log/latex-git-log
+latex-papersize/latex-papersize.py
+latex2man/latex2man
+latex2nemeth/latex2nemeth
+latexdiff/latexdiff-vc.pl
+latexdiff/latexdiff.pl
+latexdiff/latexrevise.pl
+latexindent/latexindent.pl
+latexmk/latexmk.pl
+latexpand/latexpand
+light-latex-make/llmk.lua
+lilyglyphs/lily-glyph-commands.py
+lilyglyphs/lily-image-commands.py
+lilyglyphs/lily-rebuild-pdfs.py
+ltximg/ltximg.pl
+luaotfload/luaotfload-tool.lua
+lwarp/lwarpmk.lua
+m-tx/m-tx.lua
+makedtx/makedtx.pl
+make4ht/make4ht
+match_parens/match_parens
+mathspic/mathspic.pl
+mf2pt1/mf2pt1.pl
+mkgrkindex/mkgrkindex
+mkjobtexmf/mkjobtexmf.pl
+mkpic/mkpic
+multibibliography/multibibliography.pl
+musixtex/musixflx.lua
+musixtex/musixtex.lua
+pax/pdfannotextractor.pl
+pdfcrop/pdfcrop.pl
+pdflatexpicscale/pdflatexpicscale.pl
+pedigree-perl/pedigree.pl
+perltex/perltex.pl
+petri-nets/pn2pdf
+pfarrei/a5toa4.tlu
+pfarrei/pfarrei.tlu
+pkfix-helper/pkfix-helper
+pkfix/pkfix.pl
+pmxchords/pmxchords.lua
+pst2pdf/pst2pdf.pl
+ptex-fontmaps/kanji-config-updmap-sys.sh
+ptex-fontmaps/kanji-config-updmap-user.sh
+ptex-fontmaps/kanji-config-updmap.pl
+ptex-fontmaps/kanji-fontmap-creator.pl
+ptex2pdf/ptex2pdf.lua
+purifyeps/purifyeps
+pygmentex/pygmentex.py
+pythontex/depythontex.py
+pythontex/pythontex.py
+rubik/rubikrotation.pl
+spix/spix.py
+splitindex/splitindex.pl
+srcredact/srcredact.pl
+sty2dtx/sty2dtx.pl
+svn-multi/svn-multi.pl
+tex4ebook/tex4ebook
+texcount/texcount.pl
+texdef/texdef.pl
+texdiff/texdiff
+texdirflatten/texdirflatten
+texdoc/texdoc.tlu
+texfot/texfot.pl
+texlive/fmtutil-sys.sh
+texlive/fmtutil-user.sh
+texlive/fmtutil.pl
+texlive/mktexlsr
+texlive/mktexmf
+texlive/mktexpk
+texlive/mktextfm
+texlive/rungs.tlu
+texlive/tlmgr.pl
+texlive/updmap-sys.sh
+texlive/updmap-user.sh
+texlive/updmap.pl
+texlive-extra/e2pall.pl
+texliveonfly/texliveonfly.py
+texloganalyser/texloganalyser
+texplate/texplate.sh
+thumbpdf/thumbpdf.pl
+tlcockpit/tlcockpit.sh
+tlshell/tlshell.tcl
+ulqda/ulqda.pl
+urlbst/urlbst
+vpe/vpe.pl
+webquiz/webquiz.py
+xindex/xindex.lua
+yplan/yplan
 context/stubs/unix/context
 context/stubs/unix/contextjit
 context/stubs/unix/luatools
