@@ -1,3 +1,7 @@
+2020-11-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* fam256.ch: Adapt to changes in ptex-base.ch.
+
 2020-09-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* pdfutils.ch (Scan the argument for command |c|) <expanded_code>:
